x/programs/rust/sdk-macros/tests/ui/pass/valid-state-schema.rs
use wasmlanche_sdk::state_schema;

state_schema! {
    Key => u64,
}

fn main() {}
