x/programs/rust/sdk-macros/tests/ui/fail/state-schema-with-padding-in-key.rs
use wasmlanche_sdk::state_schema;

state_schema! {
    Key(u16, u8) => u8,
}

fn main() {}
